plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.codeit'
version = '0.0.1-SNAPSHOT'
description = 'WeatherFit'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
//    implementation 'org.springframework.boot:spring-boot-h2console'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
//    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // JJWT
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    //kafka
    implementation 'org.springframework.kafka:spring-kafka'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    //Aws
    implementation 'software.amazon.awssdk:s3:2.31.7'

    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    implementation platform("org.springframework.ai:spring-ai-bom:1.1.3")
    implementation "org.springframework.ai:spring-ai-openai"
    implementation "org.springframework.ai:spring-ai-client-chat"
//    implementation "org.springframework.ai:spring-ai-openai-spring-boot-starter"
    // Runtime
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'

    // Development
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Annotation Processors
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // Test
    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test' // Security 관련 테스트만 필요하면 추가
    testImplementation 'org.springframework.batch:spring-batch-test'         // Batch 관련 테스트만 필요하면 추가

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // instancio
    testImplementation 'org.instancio:instancio-junit:5.5.1'

    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // AWS SDK for Java v2
    implementation platform('software.amazon.awssdk:bom:2.20.56')
    implementation 'software.amazon.awssdk:s3'

    // retry
    implementation 'org.springframework.retry:spring-retry'

    // Jsoup
    implementation 'org.jsoup:jsoup:1.17.2'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.16'
}

tasks.named('test') {
    useJUnitPlatform()
}


jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(
                files(classDirectories.files.collect {
                    fileTree(dir: it, exclude: [
                            '**/dto/**',
                            '**/request/**',
                            '**/response/**',
                            '**/*Dto.*',
                            '**/*Request.*',
                            '**/*Response.*',
                            '**/*Exception.*',
                            '**/*Config.*',
                            '**/*Application.*',
                            '**/*$*',
                            '**/mapper/**'
                    ])
                })
        )
    }

}

test{
    finalizedBy jacocoTestReport
}